# xrtpy

./: .codecov.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .ruff.toml  LICENSE  MANIFEST.in  README.md  README.rst  conftest.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-nox/: action.yml
.github/workflows/: check_contamination_data.yml  ci.yml  python-publish.yml  stale.yml  testing.yml  weekly.yml
IDL_scripts/: get_xrt_test_effective_area.pro  get_xrt_test_temperature_response.pro
IDL_scripts/IDL_test_scripts/: get_xrt_test_effective_area.pro  get_xrt_test_temperature_response.pro
changelog/: 102.doc.rst  104.doc.rst  104.removal.rst  111.bugfix.rst  128.doc.rst  139.removal.rst  187.doc.rst  89.feature.rst  94.doc.rst
docs/: CODE_OF_CONDUCT.rst  _links.rst  _substitutions.rst  about_xrt.rst  acknowledging_xrtpy.rst  bibliography.bib  bibliography.rst  changelog_guide.rst  code_of_conduct.rst  conf.py  contributing.rst  dem_overview.rst  examples.rst  feedback_communication.rst  getting_started.rst  glossary.rst  index.rst  install.rst  nitpick-exceptions  requirements.txt
docs/api_static/: xrtpy.image_correction.deconvolve.rst  xrtpy.image_correction.rst  xrtpy.response.channel.rst  xrtpy.response.rst  xrtpy.response.temperature_from_filter_ratio.rst  xrtpy.response.temperature_response.rst  xrtpy.response.xrt_teem.rst  xrtpy.rst  xrtpy.util.make_exposure_map.rst  xrtpy.util.rst  xrtpy.util.time.rst
docs/changelog/: 0.2.0.rst  0.3.0.rst  0.4.0.rst  0.5.0.rst  0.5.1.rst  0.6.0.rst  index.rst
docs/contributing/: acknowledging_xrtpy.rst  contributing.rst  data_from_idl.rst  index.rst  install_dev.rst  installation_for_development.rst  installation_or_development.rst  release_guide.rst  workflow.rst
docs/gallery/data_processing/: README.txt  remove_lightleak.py  temperature_from_filter_ratios.py
docs/gallery/image_filtering/: README.txt  sorting_data.py
docs/gallery/instrument_response/: README.txt  channels.py  temperature_response.py
docs/notebooks/: channel.ipynb  effective_area.ipynb  temperature_response.ipynb
docs/notebooks/computing_functions/: effective_area.ipynb  temperature_response.ipynb
docs/notebooks/data_analysis/: Deconvolving_XRT_images.ipynb  Remove_lightleak.ipynb  Temperatue_using_composites.ipynb  Temperature_using_composites.ipynb  Using_temperature_from_filter_ratio.ipynb  Using_xrt_teem.ipynb  xrt_remove_lightleak.ipynb
docs/notebooks/getting_started/: A_Practical_Guide_to_Data_Extraction_and_Visualization.ipynb  channel.ipynb  units.ipynb
docs/reference/: image_correction.rst  index.rst  response.rst  util.rst  xrt_dem_iterative.rst  xrtpy.rst
docs/response/: index.html
examples/: README.txt  channels.py  deconvolving.py  dem_iterative_example.py  effective_area.py  preview_observation.py  remove_lightleak.py  sorting_data.py  temperature_from_filter_ratios.py  testing_code.py
joss/: paper.bib  paper.md
licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst
requirements/: build.txt  docs.txt  extras.txt  install.txt  tests.txt
visualization/: xrt_metadata.py
visualization/fov/: metadata_downloader.py  metadata_manager.py  metadata_plotting.py  testing_code.py  xrt_metadata.py  xrt_metadata_plot.py
visualization/fov/test/: test_fov.py
xrt_dem_iterative/: dem_solver.py
xrtpy/: __init__.py
xrtpy/data/channels/: n_DEHP.txt  xrt_contam_on_ccd.geny  xrt_contam_on_filter.geny
xrtpy/image_correction/: __init__.py  _ssw_mirrors.py  deconvolve.py  remove_lightleak.py  xrt_deconvolve.py
xrtpy/image_correction/tests/: test_deconvolve.py  test_remove_lightleak.py  test_xrt_deconvolve.py  test_xrt_remove_lightleak.py
xrtpy/response/: __init__.py  channel.py  effective_area.py  effective_area_sav.py  temperature_from_filter_ratio.py  temperature_response.py  xrt_deconvolve.py  xrt_teem.py
xrtpy/response/data/: XRT_emiss_model.default_CHIANTI.geny  n_DEHP.txt  solspec_ch1000_photos_chianti.genx  xrt_contam_on_ccd.geny  xrt_contam_on_ccd.sav  xrt_contam_on_filter.geny
xrtpy/response/data/XRT_emiss_models/: XRT_emiss_model.default_CHIANTI.geny  XRT_emiss_model.default_CHIANTI_hybrid.geny
xrtpy/response/data/chianti_emission_models/: XRT_emiss_model.default_CHIANTI.geny  XRT_emiss_model.default_CHIANTI_hybrid.geny  XRT_emiss_model.default_CHIANTI_photospheric.geny  solspec_ch1000_corona_chianti.genx  solspec_ch1000_hybrid_chianti.genx
xrtpy/response/tests/: test_channel.py  test_effective_area.py  test_temperature_from_filter_ratio.py  test_temperature_response.py  test_temperature_response_coronal.py  test_temperature_response_hybrid.py  test_temperature_response_photospheric.py  test_that_purposefully_fails.py  test_xrt_deconvolve.py  test_xrt_teem.py
xrtpy/response/tools/: __init__.py  multi_filter_response.py
xrtpy/response/tools/test/: test_generate_temperature_responses.py
xrtpy/tests/: test_example.py  test_that_fails.py
xrtpy/util/: __init__ .py  __init__.py  filename2repo_path.py  filter_name_processing.py  filters.py  lightleak_calibration.py  make_exposure_map.py  time.py  xrt_deconvolve.py  xrt_remove_lightleak.py
xrtpy/util/tests/: test_time.py  test_xrt_deconvolve.py  test_xrt_remove_lightleak.py
xrtpy/util/tests/data/: L1_XRT20120605_215839.9.deconv.fits  L1_XRT20120605_215839.9.fits
xrtpy/visualization_GUI/: __init__.py
xrtpy/visualization_GUI/fov/: __init__.py  metadata_downloader.py
xrtpy/visualization_GUI/fov/tests/: test_fov.py
xrtpy/xrt_dem_iterative/: __init__.py  dem_plotting.py  dem_solver.py  monte_carlo_iteration.py  utils_sav_io.py  xrt_dem_statistics.py
xrtpy/xrt_dem_iterative/test/: .gitignore  Untitled-3.jl  __init__.py  conftest.py  plot_idl_vs_xrtpy_dem.py  test_IDL_vs_XRTpy_dem.py  test_dem_idl_comparison.py  test_dem_idl_comparison_mc.py  test_dem_input_validation.py  test_dem_solver.py  test_idl_vs_xrtpy_dem.py  test_plots_results.py  utils_case_io.py  utils_sav_io.py
(+1289 files in other folders)
