[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >=62.1 , != 71.0.1",
  "setuptools_scm[toml] >=6.2",
  "wheel >=0.34",
]

[project]
name = "XRTpy"
readme = "README.md"
keywords = ["Solar Physics", "x-ray", "Hinode", "XRT"]
description = "For analyzing data from the X-Ray Telescope (XRT) on the Hinode spacecraft."
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]
# SPEC 0 recommends that packages in the scientific pythoniverse support
# versions of Python that have been released in the last ≤36 months
requires-python = ">=3.11"
dynamic = ["version"]
authors = [
  {name = "Joy Velasquez", email = "joy.velasquez@cfa.harvard.edu"},
  {name = "Jonathan Slavin", email = "jslavin@cfa.harvard.edu"},
  {name = "Nick Murpy", email="namurphy@cfa.harvard.edu"},
  {name = "Will Barnes"},
  {name = "Nabil Freij", email="nabil.freij@gmail.com"},
  {name = "Stuart Mumford"},
]

dependencies = [
  "astropy >= 6.0.0",
  "matplotlib >= 3.7.0",
  "numpy >=1.24.0",
  "scikit-image >= 0.21.0",
  "scipy >= 1.11.1",
  "sunpy[map] >= 5.1.0",
]

[project.optional-dependencies]
dev = [
  "nox >= 2024.10.9",
]
tests = [
  "pytest >= 8.3.1",
  "pytest-astropy >= 0.11.0",
  "pytest-xdist >= 3.6.1",
]
docs = [
  "pydata_sphinx_theme >= 0.15.0",
  # Need pkg_resources for sphinxcontrib-bibtex
  # and this comes from setuptools
  # This is a bug upstream in the extension which
  # has yet to be fixed.
  "setuptools >= 62.1, != 71.0.1",
  "sphinx >= 7.3.0",
  "sphinx_automodapi >= 0.17.0",
  "sphinx-copybutton >= 0.5.2",
  "sphinx-gallery >= 0.16.0",
  "sphinx-hoverxref >= 1.4.0",
  "sphinx-issues >= 4.1.0",
  "sphinxcontrib-bibtex >= 2.6.2",
  "sphinxext-opengraph>=0.6.0",
  "sunpy[map,net] >= 5.0.0, < 6",
]

[project.urls]
Documentation = "https://xrtpy.readthedocs.io"
Repository = "https://github.com/HinodeXRT/xrtpy"
Issues = "https://github.com/HinodeXRT/xrtpy/issues"
Changelog = "https://xrtpy.readthedocs.io/en/stable/changelog/index.html"

[tool.setuptools]
packages = ["xrtpy"]

[tool.setuptools.package-data]
"xrtpy" = ["data/*"]
"xrtpy.response" = ["data/*.txt", "data/*.geny"]
"xrtpy.response.tests" = ["data/*/*/*.txt"]

[tool.setuptools_scm]
write_to = "xrtpy/version.py"

[tool.codespell]
skip = "*.genx,*.geny,*.png,*egg*,.git,.hypothesis,.nox,.tox,.idea,__pycache__,_build"
ignore-words-list = """
4rd,
aas,
bu,
circularly,
egde,
fo,
nd,
ons,
sav,
sav,
te,
tne,
ue
"""

[tool.pytest.ini_options]
testpaths = ['.']
xfail_strict = true
norecursedirs = [
  '*egg-info*',
  '.*cache*',
  '.*env',
  '.[tn]ox',
  '.cov*',
  '.git*',
  '.hypothesis',
  '.idea',
  '.jupyter',
  '.vscode',
  '__pycache__',
  '_dev',
  'binder',
  'build',
  'changelog',
  'dist',
  'docs',
  'licenses',
  'node_modules',
  'tools',
  'venv',
  '.venv',
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING",
  "if typing.TYPE_CHECKING",
  "coverage: ignore",
  "ImportError",
  "ModuleNotFoundError",
  "raise NotImplementedError",
  "@abstractmethod",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "*/plasmapy/*version.py",
]
