[metadata]
name = xrtpy
author = Joy Velasquez
author_email = joy.velasquez@cfa.harvard.edu
license = BSD 2-clause
license_file = LICENSE
url = https://github.com/HinodeXRT/xrtpy
description = xrtpy is Python package for analyzing data from the X-Ray Telescope instrument onboard the Hinode spacecraft.
long_description = file: README.md
edit_on_github = True
github_project =
keywords = solar physics
classifiers =
  Development Status :: 1 - Planning
  Topic :: Scientific/Engineering :: Physics
  Topic :: Scientific/Engineering :: Astronomy
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
  astropy >= 4.3.1
  cached-property >= 1.5.2
  matplotlib >= 3.3.0
  numpy >= 1.20.0
  packaging
  scipy >= 1.5.0

[options.extras_require]
extras =
  # ought to mirror requirements/extras.txt
  codespell
  pre-commit
  tox
tests =
  # ought to mirror requirements/tests.txt
  %(extras)s
  dlint
  flake8
  flake8-absolute-import
  flake8-rst-docstrings
  flake8-use-fstring
  pydocstyle
  pytest >= 5.4.0
  pytest-xdist
docs =
  # ought to mirror requirements/docs.txt
  %(extras)s
  docutils < 0.18
  jinja2 < 3.1
  nbsphinx >= 0.8
  numpydoc >= 1.2
  pillow
  pygments >= 2.11.0
  sphinx <= 2.4.4
  sphinx-changelog
  sphinx-copybutton
  sphinx-gallery
  sphinx-hoverxref
  sphinx_rtd_theme >= 1.0.0
  sphinxcontrib-bibtex
  towncrier >= 20.0
developer =
  # install everything for developers
  # ought to functionally mirror requirements.txt
  %(docs)s
  %(extras)s
  %(tests)s

[options.package_data]
xrtpy = data/*

[tool:pytest]
minversion = 5.4
testpaths = "xrtpy" "docs"
norecursedirs = "build" "docs/_build" "examples" "auto_examples"
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    NUMBER
addopts = --doctest-modules --doctest-continue-on-failure --ignore=docs/conf.py
filterwarnings =
    ignore:.*Creating a LegacyVersion.*:DeprecationWarning
looponfailroots =
    xrtpy

[flake8]
convention = numpy
extend-ignore =
    D105,
    D107,
    D202,
    D205,
    D302,
    D400,
    D403,
    E203,
    E501,
    E731,
    F401,
    F405,
    W605,
    RST210,
    RST213,
    RST306
exclude =
    extern,
    sphinx,
    *test*,
    *parsetab.py,
    conftest.py,
    docs/conf.py,
    setup.py,
    .jupyter
# Use rst-roles and rst-directives to list roles and directives from
# Sphinx and its extensions so that they don't get flagged when using
# flake8-rst-docstrings.
rst-roles =
    abbr
    any
    attr
    cite
    cite:ct
    cite:cts
    cite:p
    cite:ps
    cite:t
    cite:ts
    class
    command
    confval
    data
    dfn
    doc
    download
    envvar
    eq
    event
    exc
    file
    func
    guilabel
    kbd
    keyword
    makevar
    manpage
    menuselection
    meth
    mod
    numref
    option
    pep
    program
    ref
    regexp
    rst:dir
    samp
    term
    token
rst-directives =
    codeauthor
    confval
    deprecated
    event
    highlight
    hlist
    index
    literalinclude
    nbgallery
    only
    rst:directive
    sectionauthor
    seealso
    tabularcolumns
    todo
    versionadded
    versionchanged
enable-extensions =
    # Look for strings that have {} in them but aren't f-strings.
    # If there is a false positive from this in a file, put that in
    # per-file-ignores.
    FS003

[coverage:run]
omit =
  ci-helpers/*
  */tests/*
  xrtpy.version.py

[coverage:report]
exclude_lines =
    coverage: ignore
    ImportError
    ModuleNotFoundError
    @vectorize
    @numba.vectorize
    @numba.jit
    @jit
    @numba.njit
    @njit

[codespell]
skip = .tox,.git,.hypothesis,_build,__pycache__,*egg*,*.png,*.genx,*.geny
# Occasionally codespell will have false positives. Put words here that
# should be ignored when codespell checks spellings.
ignore-words-list =
   circularly
