[metadata]
name = xrtpy
author = Joy Velasquez, Nick Murphy, and Jonathan Slavin
author_email = joy.velasquez@cfa.harvard.edu
license = BSD 2-clause
license_file = LICENSE
url = https://github.com/HinodeXRT/xrtpy
description = A Python package for analyzing data from the X-Ray Telescope instrument onboard the Hinode spacecraft.
long_description = file: README.md
edit_on_github = True
github_project =
keywords = solar physics
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
include_package_data = True
install_requires =
    astropy >= 5.0.1
    cached-property >= 1.5.2
    matplotlib >= 3.4.0
    numpy >= 1.22
    packaging
    scipy >= 1.7.0
    sunpy >= 3.0.0
    scikit-image >= 0.16.2
    sunpy[map] >= 3.0.0
    requests

[options.extras_require]
extras =
    # ought to mirror requirements/extras.txt
    codespell
    pre-commit
    nox
tests =
    # ought to mirror requirements/tests.txt
    %(extras)s
    pydocstyle
    pytest >= 5.4.0
    pytest-allclose
    pytest-xdist
docs =
    # ought to mirror requirements/docs.txt
    %(extras)s
    docutils >= 0.18
    ipykernel
    ipython
    jinja2 != 3.1
    nbconvert < 7.14
    nbsphinx >= 0.9
    numpydoc >= 1.2
    pillow
    pygments >= 2.11
    sphinx >= 6.0
    sphinx-changelog >= 1.3
    sphinx-codeautolink >= 0.15.0
    sphinx-copybutton >= 0.5
    sphinx-gallery >= 0.12
    sphinx-hoverxref >= 1.1
    sphinx-issues >= 3.0
    sphinx_automodapi
    sphinx_rtd_theme >= 1.2
    sphinxcontrib-bibtex >= 2.5
    sunpy[net] >= 3.0.0
    towncrier >= 22.12
developer =
    # install everything for developers
    # ought to functionally mirror requirements.txt
    %(docs)s
    %(extras)s
    %(tests)s

[options.package_data]
xrtpy = data/*
xrtpy.response = data/*.txt, data/*.geny
xrtpy.response.tests = data/*/*/*.txt

[tool:pytest]
minversion = 5.4
testpaths = "xrtpy" "docs"
norecursedirs = "build" "docs/_build" "examples" "auto_examples"
doctest_optionflags =
    NORMALIZE_WHITESPACE
    ELLIPSIS
    NUMBER
addopts = --doctest-modules --doctest-continue-on-failure --ignore=docs/conf.py
filterwarnings =
    ignore:.*Creating a LegacyVersion.*:DeprecationWarning

[coverage:run]

omit =
    ci-helpers/*
    */tests/*
    xrtpy.version.py

[coverage:report]

exclude_lines =
    coverage: ignore
    ImportError
    ModuleNotFoundError
    @vectorize
    @numba.vectorize
    @numba.jit
    @jit
    @numba.njit
    @njit
